Just want to keep track of any changes I make here

JSPong v1.3.1:
	Fixed a typo
	Split up the files
		See index.html for where to put them when adding new
	Added single player and two player menus
	Also added single and two player gamestates, but aren't implemented yet
		In the future might be a cutscene or something
	Implemented arrays of sounds
	Implemented multiple success levels

JSPong v1.3:
	Since this ended up being so big, I changed it to 1.3
	Tweaked collision settings
	index.html - added onclick event
	Added button object
	Added more menu functionality
		Buttons!
		Multiple pages!
		Way too much time spent!
		Gazillions of lines of code!
		As in more than the game!
		Should probably work on that later!
	Fixed a typ (derp)
	Line count: 666

	F**k github

JSPong v1.2.2:
	Fixed ball getting stuck at top and bottom
	Fixed sounds playing right after another to work
	Changed collision detection to hopefully be more accurate
	Added point win and loss sounds (left side is player1)
	Line count: 426

JSPong v1.2.1:
	Got sound working
		Added bouncing sound with one note
	Made it so arrow keys and WASD don't scroll
	Centered text
	Got sound to work with a series of notes
		Next up will be loading from file
	Line count: 380

JSPong v1.2:
	Implemented gamestates
		Loading
		Main Menu
		Setting up/resetting
		Playing
		Gameover
	Fixed some little bugs
	Line count: 336

JSPong v1.1:
	Made it so paddles can't exit canvas
	Set the starting velocity of the ball to be randomized
	Also, made it so winner takes it
	Got rid of some magic numbers (height and width)
	Players now should start in the center
	Adjusted some things
	Made it harder by making the paddles smaller
	Acceleration after hitting paddles is now higher
	Changed around the physics - ball y velocity is now dependent on where it hits the paddle
		I'll tweak this down the road
	Upped the player speed a bit to account for increased difficulty
	Also added a limit on y velocity so it's not ridiculous